<resources>
    <string name="app_name">Portable UTM Android Client</string>
    <string name="endpoint">Endpoint</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="result">Token</string>
    <string name="vehicles">Vehicles</string>
    <string name="operations">Operations</string>

    <string name="number">Number:</string>
    <string name="model">Model:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="type">Type:</string>
    <string name="registeredby">Registered by:</string>
    <string name="owner">Owner:</string>
    <string name="date">Date:</string>
    <string name="faa">FAA:</string>
    <string name="uvin">Uvin:</string>

    <string name="description">Description:</string>
    <string name="startDate">Start:</string>
    <string name="endDate">End:</string>
    <string name="maxAltitude">Max Altitude:</string>
    <string name="pilotName">Pilot:</string>
    <string name="pilotPhone">Phone:</string>
    <string name="droneId">Drone ID:</string>
    <string name="droneDescription">Drone Description:</string>
    <string name="flightComments">Flight Comments:</string>

    <string name="test_vehicles">Test getVehicles()</string>
    <string name="endpoints">Endpoints</string>
    <string name="search_user">Search User</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="backend_endpoint">Backend Endpoint</string>
    <string name="frontend_endpoint">Frontend Endpoint</string>
    <string name="change_state">Change State</string>
    <string name="select_state">Select State</string>
    <string name="upload_dat_file">Upload .dat File</string>
    <string name="send_pilot_position">Send Pilot Position</string>
    <string name="check_tracker_position">check tracker position</string>
    <string name="altitude">Altitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="tracker_position">Tracker Position</string>
    <string name="authorization">Authorization</string>
    <string name="check_state_updates">Check State Updates</string>
    <string name="stop">Stop</string>
    <string name="wait">Wait</string>
</resources>