<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleInfo">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/model"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="86dp"
        android:text="@string/number"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/activity_VehicleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Nombre"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/manufacturer"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop= "32dp"
        android:text="@string/type"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/registeredby"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/owner"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/faa"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/uvin"
        android:textColor="#F44336"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/activity_registerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="fecha de registro"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_Model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="modelo"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_Manufacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="fabricante"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_VehicleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="tipo"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_registeredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="registrado por"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="dueño"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_faaNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="faaNumber"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_uvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="uvin"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:text="numero"
        android:textSize="15sp" />

</RelativeLayout>