<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OperationInfo"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="7dp"
        android:text="@string/startDate"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/endDate"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="86dp"
        android:text="@string/description"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/activity_opId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="ID"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/activity_status"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="28dp"
        android:gravity="right"
        android:text="status"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/maxAltitude"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/pilotName"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/pilotPhone"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/droneId"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/droneDescription"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/owner"
        android:textColor="#F44336"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="31dp"
        android:text="@string/flightComments"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/activity_droneDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="descripcion drone"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="startdate"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="endate"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_maxAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="altura"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_pilotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="nombre"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_pilotPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="telefono"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_droneId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="drone id"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="owner"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_flightComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/flightComments"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/activity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:text="descripcion"
        android:textSize="15sp" />

</RelativeLayout>
</ScrollView>